Add grid & main files

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 		</script>
 		<!-- OTHER -->
 		<script src="nn.js"></script>
+		<script src="grid.js"></script>
 
 		<!-- RENDERING -->
 		<script src="webgl.js"></script>
@@ -37,6 +38,8 @@
 		<!-- COMPONENTS -->
 
 
+		<!-- MAIN -->
+		<script src="main.js"></script>
 
 	</body>
 
