Add components. Add entity creator

--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
 		<script src="webgl.js"></script>
 	
 		<!-- COMPONENTS -->
-
+		<script src="components.js"></script>
 
 		<!-- MAIN -->
+		<script src="entities.js"></script>
 		<script src="main.js"></script>
 
 	</body>
