--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			attribute vec2 a_Position;
 
 			void main(){
-				gl_Position = vec4(a_Position,0,1);
+				gl_Position = vec4(a_Position/150.0,0,1);
 				gl_PointSize = 10.0;
 			}
 		</script>
