--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			attribute vec2 a_Position;
 
 			void main(){
-				gl_Position = vec4(a_Position/150.0,0,1);
+				gl_Position = vec4(vec2(a_Position.x-150.0,-a_Position.y+150.0)/150.0,0,1);
 				gl_PointSize = 10.0;
 			}
 		</script>
@@ -30,11 +30,14 @@
 		</script>
 		<!-- OTHER -->
 		<script src="nn.js"></script>
-		<script src="grid.js"></script>
+		<script src="functions.js"></script>
 
 		<!-- RENDERING -->
 		<script src="webgl.js"></script>
-	
+
+		<!-- DATASTRUCTURES -->
+		<script src="grid.js"></script>
+
 		<!-- COMPONENTS -->
 		<script src="components.js"></script>
 
