--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
 		<!-- COMPONENTS -->
 		<script src="components.js"></script>
+		<script src="inputSystems.js"></script>
 
 		<!-- MAIN -->
 		<script src="entities.js"></script>
